objects/LLC_BI__Income__c.object
<CustomObject>
    <description>The income object stores details about an applicant&apos;s income.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this income belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this lookup field with the Address record to which the income fields refers. By default, this field is blank.</description>
        <inlineHelpText>This field displays the Address record to which the Income record refers.</inlineHelpText>
        <label>Address</label>
        <referenceTo>LLC_BI__Address__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Business_Name__c</fullName>
        <description>The user populates this text field to capture the name of the company or employer for which the borrower works. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s employer or business name in this field.</inlineHelpText>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and represents the contact who has this income.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox to indicate that the recorded income information is not a current source of income. By default, this checkbox is deselected.</description>
        <inlineHelpText>Select this checkbox if this record is not a current source of income.</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Source__c</fullName>
        <description>This field is optional and represents the source of the applicant&apos;s income.</description>
        <label>Income Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Stubs</fullName>
                </value>
                <value>
                    <fullName>Tax Return</fullName>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
                <value>
                    <fullName>PAYG</fullName>
                </value>
                <value>
                    <fullName>P60</fullName>
                </value>
                <value>
                    <fullName>Customer Reported</fullName>
                </value>
                <value>
                    <fullName>Spreads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Type__c</fullName>
        <description>This field is required and represents the type of income.</description>
        <label>Income Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony Support</fullName>
                </value>
                <value>
                    <fullName>Annual Bonus/Commission</fullName>
                </value>
                <value>
                    <fullName>Gross Annual Income</fullName>
                </value>
                <value>
                    <fullName>Investment/Trust Income</fullName>
                </value>
                <value>
                    <fullName>Military Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Part Time Income</fullName>
                </value>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Self Employment Income</fullName>
                </value>
                <value>
                    <fullName>Taxable Income</fullName>
                </value>
                <value>
                    <fullName>Total Before Tax Income</fullName>
                </value>
                <value>
                    <fullName>Unemployment Benefits</fullName>
                </value>
                <value>
                    <fullName>Financially Analyzed Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this income is related to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Income__c</fullName>
        <description>This field is required and represents the amount of an applicant&apos;s monthly income.</description>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Position__c</fullName>
        <description>The user populates this text field to capture the borrower’s job position. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s job position in this field.</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Yearly_Income__c</fullName>
        <description>This field is optional and represents the amount of an applicant&apos;s yearly income.</description>
        <label>Yearly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Monthly_Yearly_Income</fullName>
        <active>true</active>
        <description>Monthly income must be 1/12 of yearly income.</description>
        <errorConditionFormula>LLC_BI__Monthly_Income__c != ROUND(LLC_BI__Yearly_Income__c/12,2)</errorConditionFormula>
        <errorMessage>Monthly income must be 1/12 of yearly income.</errorMessage>
    </validationRules>
</CustomObject>